# noppakao

./: .gitignore  Dockerfile  README.md  docker-compose.develop.yml  docker-compose.yml  mahjong-development.cfg.simple  noppakao-development.cfg.simple  package-lock.json  pyproject.toml
mahjong/: default_settings.py
mahjong/cmd/: web.py
mahjong/models/: __init__.py  categories.py  flags.py  teams.py
mahjong/utils/: config.py  updater_info.py
mahjong/web/: __init__.py  acl.py
mahjong/web/forms/: accounts.py  categories.py  flags.py  teams.py
mahjong/web/static/: package.json
mahjong/web/views/: accounts.py  categories.py  dashboards.py  paginations.py  submit_flags.py  teams.py  upload_data.py  user.py
noppakao/: default_settings.py
noppakao/cmd/: web.py
noppakao/models/: __init__.py  categories.py  challenges.py  config.py  course.py  events.py  flags.py  media.py  oauth2.py  organizations.py  questions.py  teams.py  transactions.py  updates.py  users.py  utils.py
noppakao/utils/: config.py  template_filters.py  updater_info.py
noppakao/web/: __init__.py  acl.py  oauth.py  oauth2.py
noppakao/web/forms/: __init__.py  accounts.py  categories.py  challenges.py  courses.py  events.py  fields.py  flags.py  organizations.py  questions.py  teams.py
noppakao/web/static/: package-lock.json  package.json
noppakao/web/views/: __init__.py  accounts.py  categories.py  challenges.py  courses.py  dashboards.py  events.py  index.py  media.py  organizations.py  paginations.py  questions.py  submit_flags.py  teams.py  user.py  (+1 more)
scripts/: auto-build-brython  init-admin.py  init-config.py  migrate_db_noppakao.py  mock-data.py  npm  run-web  run-web-develop
(+120 files in other folders)
