[tool.poetry]
name = "noppakao"
version = "0.1.0"
description = ""
authors = []
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-login = "^0.6.3"
authlib = "^1.3.1"
pillow = "10.4.0"
mongoengine = "^0.29.1"
pathlib = "^1.0.1"
markdown = "^3.4.3"
flask-wtf = "^1.1.1"
pandas = "^2.0.3"
flask-me = "^1.0.1"
flask-caching = "^2.3.0"
flask-bcrypt = "^1.0.1"
update = "^0.0.1"
email-validator = "^2.0.0.post2"
idna = "^3.4"
certifi = "^2023.7.22"
requests = "^2.31.0"
brython = "^3.12.4"
watchdog = "^4.0.1"
logger = "^1.4"

[tool.poetry.scripts]
noppakao-web = "noppakao.cmd.web:main"

[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"